{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 85,
  "lineage": "5e05c07c-af4c-0caf-d791-8739859ab104",
  "resources": [
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335082366654:security-group/sg-0d158f95f53d7dfb2",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0d158f95f53d7dfb2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0925af7256b06ac28"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "Bangalore-dev-eks-cluster-2025111113583873870000000b",
            "name_prefix": "Bangalore-dev-eks-cluster-",
            "owner_id": "335082366654",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "Bangalore-dev-eks-cluster",
              "Project": "Bangalore"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "Bangalore-dev-eks-cluster",
              "Project": "Bangalore"
            },
            "timeouts": null,
            "vpc_id": "vpc-036b8f5e6c1a1ca41"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335082366654:security-group/sg-0925af7256b06ac28",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0925af7256b06ac28",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d158f95f53d7dfb2"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d158f95f53d7dfb2"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d158f95f53d7dfb2"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d158f95f53d7dfb2"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d158f95f53d7dfb2"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d158f95f53d7dfb2"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "Bangalore-dev-eks-node-2025111113583873440000000a",
            "name_prefix": "Bangalore-dev-eks-node-",
            "owner_id": "335082366654",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "Bangalore-dev-eks-node",
              "Project": "Bangalore",
              "kubernetes.io/cluster/Bangalore-dev-eks": "owned"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "Bangalore-dev-eks-node",
              "Project": "Bangalore",
              "kubernetes.io/cluster/Bangalore-dev-eks": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-036b8f5e6c1a1ca41"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-873883515",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d158f95f53d7dfb2",
            "security_group_rule_id": "sgr-02addfc3109a9135e",
            "self": false,
            "source_security_group_id": "sg-0925af7256b06ac28",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-255045856",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0925af7256b06ac28",
            "security_group_rule_id": "sgr-0ca0b2ad2be3f4610",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3878096350",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0925af7256b06ac28",
            "security_group_rule_id": "sgr-0204d88ef01f83024",
            "self": false,
            "source_security_group_id": "sg-0d158f95f53d7dfb2",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-2448805092",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0925af7256b06ac28",
            "security_group_rule_id": "sgr-012fccbfbc088c393",
            "self": false,
            "source_security_group_id": "sg-0d158f95f53d7dfb2",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-1488431986",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0925af7256b06ac28",
            "security_group_rule_id": "sgr-00cbf656b9a81fc79",
            "self": false,
            "source_security_group_id": "sg-0d158f95f53d7dfb2",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1273730899",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0925af7256b06ac28",
            "security_group_rule_id": "sgr-0d1473e2771c7af33",
            "self": false,
            "source_security_group_id": "sg-0d158f95f53d7dfb2",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-793420952",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0925af7256b06ac28",
            "security_group_rule_id": "sgr-0e5a2e2942afe5d63",
            "self": false,
            "source_security_group_id": "sg-0d158f95f53d7dfb2",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3814277607",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0925af7256b06ac28",
            "security_group_rule_id": "sgr-00d7729983e9c431d",
            "self": false,
            "source_security_group_id": "sg-0d158f95f53d7dfb2",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-3952089214",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0925af7256b06ac28",
            "security_group_rule_id": "sgr-004c5159d0f6ad7e5",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-557742148",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0925af7256b06ac28",
            "security_group_rule_id": "sgr-0f857da8985315b11",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-2237782955",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0925af7256b06ac28",
            "security_group_rule_id": "sgr-0797eea77496b1a53",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335082366654:network-acl/acl-0f9c1187115e05349",
            "default_network_acl_id": "acl-0f9c1187115e05349",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0f9c1187115e05349",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "335082366654",
            "subnet_ids": [
              "subnet-023ec082e20d5983e",
              "subnet-02d61fbd11162acb4",
              "subnet-0347f0aff944b3784",
              "subnet-05a5c4b2cde3dfb17",
              "subnet-07837c1326ddacc0f",
              "subnet-0ed2e76559a80ab60"
            ],
            "tags": {
              "Env": "dev",
              "Name": "Bangalore-dev-vpc-default",
              "Project": "Bangalore"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "Bangalore-dev-vpc-default",
              "Project": "Bangalore"
            },
            "vpc_id": "vpc-036b8f5e6c1a1ca41"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335082366654:route-table/rtb-0a2d89079024c0085",
            "default_route_table_id": "rtb-0a2d89079024c0085",
            "id": "rtb-0a2d89079024c0085",
            "owner_id": "335082366654",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Env": "dev",
              "Name": "Bangalore-dev-vpc-default",
              "Project": "Bangalore"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "Bangalore-dev-vpc-default",
              "Project": "Bangalore"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-036b8f5e6c1a1ca41"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335082366654:security-group/sg-09f9a115a7fcb5c3c",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-09f9a115a7fcb5c3c",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "335082366654",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "Bangalore-dev-vpc-default",
              "Project": "Bangalore"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "Bangalore-dev-vpc-default",
              "Project": "Bangalore"
            },
            "vpc_id": "vpc-036b8f5e6c1a1ca41"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0911cb7415bb832ae",
            "arn": "arn:aws:ec2:us-east-1:335082366654:elastic-ip/eipalloc-0911cb7415bb832ae",
            "association_id": "eipassoc-02b2107a3618e3303",
            "domain": "vpc",
            "id": "eipalloc-0911cb7415bb832ae",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0def0577a2cdd6eaf",
            "private_dns": "ip-10-0-101-86.ec2.internal",
            "private_ip": "10.0.101.86",
            "public_dns": "ec2-98-84-64-197.compute-1.amazonaws.com",
            "public_ip": "98.84.64.197",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Env": "dev",
              "Name": "Bangalore-dev-vpc-us-east-1a",
              "Project": "Bangalore"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "Bangalore-dev-vpc-us-east-1a",
              "Project": "Bangalore"
            },
            "vpc": true
          },
          "dependencies": [
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335082366654:internet-gateway/igw-01f047a01c20ca356",
            "id": "igw-01f047a01c20ca356",
            "owner_id": "335082366654",
            "tags": {
              "Env": "dev",
              "Name": "Bangalore-dev-vpc",
              "Project": "Bangalore"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "Bangalore-dev-vpc",
              "Project": "Bangalore"
            },
            "vpc_id": "vpc-036b8f5e6c1a1ca41"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0911cb7415bb832ae",
            "association_id": "eipassoc-02b2107a3618e3303",
            "connectivity_type": "public",
            "id": "nat-04ba17247858ae686",
            "network_interface_id": "eni-0def0577a2cdd6eaf",
            "private_ip": "10.0.101.86",
            "public_ip": "98.84.64.197",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02d61fbd11162acb4",
            "tags": {
              "Env": "dev",
              "Name": "Bangalore-dev-vpc-us-east-1a",
              "Project": "Bangalore"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "Bangalore-dev-vpc-us-east-1a",
              "Project": "Bangalore"
            }
          },
          "dependencies": [
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c59218e1747f29ed1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04ba17247858ae686",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c59218e1747f29ed",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_nat_gateway.this",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01f047a01c20ca356",
            "id": "r-rtb-00365295f5b3937491080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00365295f5b393749",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335082366654:route-table/rtb-0c59218e1747f29ed",
            "id": "rtb-0c59218e1747f29ed",
            "owner_id": "335082366654",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04ba17247858ae686",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "dev",
              "Name": "Bangalore-dev-vpc-private",
              "Project": "Bangalore"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "Bangalore-dev-vpc-private",
              "Project": "Bangalore"
            },
            "timeouts": null,
            "vpc_id": "vpc-036b8f5e6c1a1ca41"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335082366654:route-table/rtb-00365295f5b393749",
            "id": "rtb-00365295f5b393749",
            "owner_id": "335082366654",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01f047a01c20ca356",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "dev",
              "Name": "Bangalore-dev-vpc-public",
              "Project": "Bangalore"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "Bangalore-dev-vpc-public",
              "Project": "Bangalore"
            },
            "timeouts": null,
            "vpc_id": "vpc-036b8f5e6c1a1ca41"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ad61a8ec416af9f",
            "route_table_id": "rtb-0c59218e1747f29ed",
            "subnet_id": "subnet-07837c1326ddacc0f"
          },
          "dependencies": [
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081273cd84aabf00b",
            "route_table_id": "rtb-0c59218e1747f29ed",
            "subnet_id": "subnet-023ec082e20d5983e"
          },
          "dependencies": [
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-050f41c29473a4bfe",
            "route_table_id": "rtb-0c59218e1747f29ed",
            "subnet_id": "subnet-0ed2e76559a80ab60"
          },
          "dependencies": [
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9feaf95d4cb1ea5",
            "route_table_id": "rtb-00365295f5b393749",
            "subnet_id": "subnet-02d61fbd11162acb4"
          },
          "dependencies": [
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d824bc6ddef5a701",
            "route_table_id": "rtb-00365295f5b393749",
            "subnet_id": "subnet-0347f0aff944b3784"
          },
          "dependencies": [
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02edd02b0b4a0b014",
            "route_table_id": "rtb-00365295f5b393749",
            "subnet_id": "subnet-05a5c4b2cde3dfb17"
          },
          "dependencies": [
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335082366654:subnet/subnet-07837c1326ddacc0f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07837c1326ddacc0f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "335082366654",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "Bangalore-dev-vpc-private-us-east-1a",
              "Project": "Bangalore",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "Bangalore-dev-vpc-private-us-east-1a",
              "Project": "Bangalore",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-036b8f5e6c1a1ca41"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335082366654:subnet/subnet-023ec082e20d5983e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-023ec082e20d5983e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "335082366654",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "Bangalore-dev-vpc-private-us-east-1b",
              "Project": "Bangalore",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "Bangalore-dev-vpc-private-us-east-1b",
              "Project": "Bangalore",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-036b8f5e6c1a1ca41"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335082366654:subnet/subnet-0ed2e76559a80ab60",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed2e76559a80ab60",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "335082366654",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "Bangalore-dev-vpc-private-us-east-1c",
              "Project": "Bangalore",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "Bangalore-dev-vpc-private-us-east-1c",
              "Project": "Bangalore",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-036b8f5e6c1a1ca41"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335082366654:subnet/subnet-02d61fbd11162acb4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d61fbd11162acb4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "335082366654",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "Bangalore-dev-vpc-public-us-east-1a",
              "Project": "Bangalore",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "Bangalore-dev-vpc-public-us-east-1a",
              "Project": "Bangalore",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-036b8f5e6c1a1ca41"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335082366654:subnet/subnet-0347f0aff944b3784",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0347f0aff944b3784",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "335082366654",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "Bangalore-dev-vpc-public-us-east-1b",
              "Project": "Bangalore",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "Bangalore-dev-vpc-public-us-east-1b",
              "Project": "Bangalore",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-036b8f5e6c1a1ca41"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335082366654:subnet/subnet-05a5c4b2cde3dfb17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a5c4b2cde3dfb17",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "335082366654",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "Bangalore-dev-vpc-public-us-east-1c",
              "Project": "Bangalore",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "Bangalore-dev-vpc-public-us-east-1c",
              "Project": "Bangalore",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-036b8f5e6c1a1ca41"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335082366654:vpc/vpc-036b8f5e6c1a1ca41",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f9c1187115e05349",
            "default_route_table_id": "rtb-0a2d89079024c0085",
            "default_security_group_id": "sg-09f9a115a7fcb5c3c",
            "dhcp_options_id": "dopt-039a59184ff45ebbb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-036b8f5e6c1a1ca41",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a2d89079024c0085",
            "owner_id": "335082366654",
            "tags": {
              "Env": "dev",
              "Name": "Bangalore-dev-vpc",
              "Project": "Bangalore"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "Bangalore-dev-vpc",
              "Project": "Bangalore"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}